[revised]finish hergeia website of cn verison

--- a/zh/herlady.html
+++ b/zh/herlady.html
@@ -51,12 +51,11 @@
 
                 <div id="navbar-scroll" class="collapse navbar-collapse navbar-themers navbar-right">
                     <ul class="nav navbar-nav">
-                        <li><a href="index.html#intro">品牌理念</a></li>
-                        <li><a href="index.html#content-her-feature">品牌特色</a></li>
-                        <li><a href="index.html#goods">商品資訊</a></li>
+                        <li><a href="index.html#intro">理念與特色</a></li>
+                        <li><a href="index.html#goods">私密處不適</a></li>
                         <li><a href="index.html#contact-her">聯絡我們</a></li>
+                        <li><a href="https://www.facebook.com/Hergeia/" target="_blank">facebook</a></li>
                         <li><a href="../en/herlady.html">English</a></li>
-
                     </ul>
                 </div>
             </div>
@@ -68,12 +67,12 @@
             <div class="row">
                 <div class="intro-box">
                     <div class="intro">
-                        <h1 class="wow fadeInLeft">
-                            女生最安心的私密檢測商品<br><br>
+                        <h1 class="intro-title wow fadeInLeft">
+                            快速了解私密處健康狀況的好姊妹<br><br>
                         </h1>
                         <div class="head-btn wow fadeInLeft">
 
-                            <a href="#herlady-idea" class="btn-primary-herlady play-market">
+                            <a href="#video" class="btn-primary-herlady play-market">
                                 <i class="fa fa-arrow-down" aria-hidden="true"></i>
                             </a>
                         </div>
@@ -83,56 +82,14 @@
         </div>
 
     </div>
-
-    <!-- 品牌理念 -->
-    <section id="herlady-idea">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 feature-2-pic-what wow fadeInLeft"><img src="../img/her-herlady-what.png" class="img-center" alt="" /></div>
-                <div class="col-md-6 wow fadeInRight">
-                    <div>
-                        <h2 class="herlady-idea-title">什麼是賀小姐pH值檢驗棒</h2>
-                        <p class="herlady-idea-content">賀小姐pH值檢驗棒是一款陰道分泌物檢驗棒，<br> 當妳感受到私密處疼痛、分泌物異常時，
-                            <br> 賀小姐提供最安心舒適的方式，
-                            <br> 不必出門、快速檢驗，幫妳快速了解問題！
-                        </p>
-                    </div>
-                </div>
-
-            </div>
-
-        </div>
-    </section>
-    <!-- Hergeia使用 -->
-    <section id="content-her-ph">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="col-md-12 feature-2-pic wow fadeInLeft">
-                        <p>賀小姐pH值檢驗棒，能利用您私密處的pH值變化，分析是否感染以及可能的感染原因</p>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12 feature-2-pic wow fadeInRight"><img src="../img/her-herlady-ph.png" class="img-center" alt="" />
-                    <div class="box-area">
-                        <p class="herlady-ph-content">簡單的顏色標示，讓您一眼就可明白結果，賀小姐給妳最貼心舒適的檢測方式</p>
-                    </div>
-
-                </div>
-            </div>
-
-
-        </div>
-    </section>
     <!-- Hergeia影片 -->
     <section id="video" class="video">
         <div class="container">
             <div class="row">
                 <div class="main_video_area sections text-center">
                     <div class="head_title">
-                        <h5 class="herlady-movie-title">為什麼需要用</h5>
-                        <p class="herlady-movie-content">根據統計，全球75%的女性，一生之中最少會感染一次陰道炎， 因此定期進行居家檢測，可以貼心又隱私的照顧私密處的健康。</p>
+                        <h5 class="herlady-movie-title">根據統計，全球75%的女性，一生之中最少會感染一次陰道炎！</h5>
+                        <p class="herlady-movie-content">反反覆覆的搔癢跟疼痛，煩悶又惱人！到底什麼是陰道感染？又為什麼會發炎？要怎麼緩解? 讓醫生來告訴妳！</p>
                     </div>
                     <div class="main_video_content">
                         <div class="col-sm-4">
@@ -166,9 +123,43 @@
                 </div>
             </div>
         </div>
-
     </section>
+    <!-- 酸鹼值簡介 2018.07新增 -->
+    <div id="her-ph">
+        <div class="container">
+            <div class="row">
 
+                <!-- feature image -->
+                <div class="col-md-6 col-sm-6 feature-2-pic">
+                    <img src="../img/herlady_pH_cn-2.png" alt="image" class="img-responsive-intro">
+                </div>
+
+                <!-- feature content -->
+                <div class="col-md-6 wow fadeInRight">
+                    <h2 class="intro-title">私密處保持弱酸，也有小細節！</h2>
+                    <p class="intro-p">女生私密處的健康酸鹼值是pH3.8-4.2，酸酸的環境能讓陰道好健康！<br>可是，若是酸鹼值稍微失去了平衡，就可能會養出壞菌，造成私密處的感染與不適！</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- 使用介紹 2018.07由理念改為介紹-->
+    <section id="herlady-idea">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 wow fadeInLeft">
+                    <div>
+                        <h2 class="herlady-idea-title"><br><br>要怎麼知道自己的陰道酸鹼值是多少呢？</h2>
+                        <p class="herlady-idea-content">Hergeia賀小姐-陰道分泌物pH值檢驗棒，<br>是專為陰道感染所開發的快篩檢驗棒。
+                            <br>只要自己收集少許陰道分泌物，<br>妳就可以迅速了解私密處的酸鹼值，找到不舒服的原因！
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-6 feature-2-pic-what"><img src="../img/her-herlady-what.png" class="img-center" alt="" /></div>
+            </div>
+
+        </div>
+    </section>
 
     <!-- Hergeia特色 -->
     <section id="content-her-need">
@@ -176,7 +167,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="col-md-12 feature-2-pic wow fadeInLeft">
-                        <h5 class="her-feature-title">或者，當您有以下需求時</h5>
+                        <h5 class="her-feature-title">當妳有以下需求時，就讓賀小姐來幫妳解決！</h5>
                     </div>
                 </div>
             </div>
@@ -186,8 +177,8 @@
                         <div class="col-md-3 wow fadeInLeft text-center">
                             <span class="icons c1"><img src="../img/her-herlady-need-ache.png" alt="icon" /></span>
                             <div class="box-area">
-                                <h3 class="lady-why-title">私密處瘙癢或灼痛感</h3>
-                                <p>發生私密處瘙癢或灼痛，<br>讓人坐立難安，<br>賀小姐幫妳避免難以啟齒的尷尬！<br></p>
+                                <h3 class="lady-why-title">私密處搔癢或灼痛感</h3>
+                                <p>發生私密處搔癢或灼痛，<br>讓人坐立難安，<br>賀小姐幫妳避免難以啟齒的尷尬！<br></p>
 
                             </div>
                         </div>
@@ -216,16 +207,35 @@
 
                 </div>
             </div>
-
-
         </div>
     </section>
+    <!-- Hergeia使用 -->
+    <section id="content-her-ph">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="col-md-12 feature-2-pic">
+                        <p>一分鐘快速 “辨” 色，結果容易判讀</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12 feature-2-pic wow fadeInRight"><img src="../img/her-herlady-ph.png" class="img-center" alt="" />
+                    <div class="box-area">
+                        <p class="herlady-ph-content">賀小姐pH值檢驗棒，能利用陰道分泌物的酸鹼值，分析是否感染及可能的感染原因<br>簡單的顏色標示，讓妳一眼就可明白結果，賀小姐給妳最貼心舒適的檢測方式</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- 賀小姐特色 -->
     <section id="services">
         <div class="container wow fadeInUp">
             <div class="row">
                 <div class="col-md-12 feature-2-pic">
-                    <h5 class="her-feature-title">賀小姐的特色</h5>
+                    <h5 class="her-feature-title">賀小姐提供您最舒適的居家自我檢測套組</h5>
+                    <p>自我操作、快速篩檢、高度隱私</p>
                     <div class="section-title-divider"></div>
                 </div>
             </div>
@@ -251,7 +261,7 @@
                 <div class="col-md-4 service-item">
                     <div class="service-icon"><span><img src="../img/her-herlady-feature-safe.png" alt="icon" /></span></div>
                     <h4 class="service-title">安全</h4>
-                    <p class="service-description">擁有舒適材質及擋板安全設計
+                    <p class="service-description">檔板安全設計
                     </p>
                 </div>
                 <div class="col-md-4 service-item">
@@ -280,12 +290,10 @@
                 <div class="product-content col-md-6 col-sm-6">
                     <div class="about-text">
 
-                        <h5 class="herlady-product">賀小姐檢測棒</h5>
-                        <p>最懂私密處悄悄話的好姐妹</p>
-                        <h3 class="herlady-price">原價 NT$ 250<br><br></h3>
-
+                        <h5 class="herlady-product">Hergeia賀小姐-陰道分泌物pH值檢驗棒</h5>
+                        <p>快速了解私密處健康狀況的好姊妹</p>
+                        <h3 class="herlady-price">定價 NT$ 500<br><br></h3>
                     </div>
-
                 </div>
                 <div class="col-md-6 col-sm-6 row-herlady">
                     <!--<div class="div-inline btn-default-herlady-disable">產品測試中</div>
@@ -383,7 +391,7 @@
     <section id="content-notice">
         <div class="container">
             <div class="row">
-                <div class="col-md-12 feature-2-pic wow fadeInLeft">
+                <div class="col-md-12 feature-2-pic">
                     <h5 class="her-feature-title">FAQ 注意事項</h5>
                     <div class="section-title-divider"></div>
                 </div>
@@ -393,26 +401,25 @@
                     <div class="skill-home-solid clearfix">
                         <div class="col-md-4 text-center">
                             <div class="box-area-notice">
-                                <p class="notice-label">不適合使用本產品之女性：<br> 1. 色盲<br> 2. 未有性行為<br> 3. 已使有陰道塞劑者<br> 4. 使用陰道置入之雌激素藥物者<br> 5. 月經期間或陰道出血者</p>
+                                <p class="notice-label">不適合使用本產品之女性：<br> 1. 對顏色判讀有困難者<br> 2. 未有性行為者<br> 3. 已使用陰道藥物者<br> 4. 月經期間或陰道出血者</p>
 
                             </div>
                         </div>
                         <div class="col-md-4 text-center">
                             <div class="box-area-notice">
-                                <p class="notice-label">使用前一天內應避免性生活和陰道盥洗或用藥。</p>
+                                <p class="notice-label">使用前36小時內應避免性生活或藥物，24小時內避免陰道灌洗。</p>
                             </div>
                         </div>
                         <div class="col-md-4 text-center">
                             <div class="box-area-notice">
-                                <p class="notice-label">此檢驗棒置入陰道時勿超越保護板處。</p>
+                                <p class="notice-label">請避免將保護檔板推入陰道內。</p>
                             </div>
                         </div>
                     </div>
                     <div class="skill-home-solid clearfix">
                         <div class="col-md-4 text-center">
                             <div class="box-area-notice">
-                                <p class="notice-label">鋁袋打開之後，請立即使用檢驗棒。</p>
-
+                                <p class="notice-label">鋁袋打開之後，請立即使用檢驗棒，並請於試片乾掉前完成判讀，以避免誤判。<br>本檢驗結果無法取代醫師診斷。</p>
                             </div>
                         </div>
                         <div class="col-md-4 text-center">
@@ -434,13 +441,13 @@
     <section id="qaContent">
         <div class="container">
 
-            <div class="row  wow fadeInRight">
+            <div class="row">
                 <div class="col-md-4">
                     <div>
                         <ul class="accordionPart">
                             <li>
                                 <div class="qa_title"><i class="fa fa-angle-right"></i> 賀小姐產品的適應症狀有哪些？</div>
-                                <div class="qa_content">陰道分泌物增多，顏色或氣味發生變化，外陰瘙癢或灼熱疼痛時的篩檢。
+                                <div class="qa_content">陰道分泌物異常增多、分泌物的顏色、氣味或黏稠度等改變，或有陰道搔癢、灼熱疼痛的初步篩檢。
                                 </div>
                             </li>
                         </ul>
@@ -449,7 +456,7 @@
                         <ul class="accordionPart">
                             <li>
                                 <div class="qa_title"><i class="fa fa-angle-right"></i> 賀小姐pH值檢驗棒的檢測原理為何？</div>
-                                <div class="qa_content">本檢驗棒由酸鹼(pH)試紙片和具生物相容性的塑膠組裝而成，當檢驗棒上試片置入陰道充分浸入分泌物 後，藉由分泌物和試紙反應，試紙即在不同酸鹼度下，呈現不同顏色，以區別白色念珠菌(酸性)、細菌(或滴蟲)引起之陰道感染。
+                                <div class="qa_content">本檢驗棒由酸鹼(pH)試片和具生物相容性的塑膠組裝而成。將檢驗棒製入陰道，並使試片充分浸入分泌物後，便能藉由分泌物和試紙反應而呈現出不同顏色。由不同酸鹼值所顯示出來的顏色可用於區別陰道感染的可能原因：白色念珠菌、細菌或滴蟲引起之陰道感染。
                                 </div>
                             </li>
                         </ul>
@@ -469,7 +476,7 @@
                         <ul class="accordionPart">
                             <li>
                                 <div class="qa_title"><i class="fa fa-angle-right"></i> 產品該如何保存？</div>
-                                <div class="qa_content">請將檢驗棒保存於2-35度C之環境，請維持乾燥並避免直接照射到陽光、請勿冷凍保存。若能依指示保存及使用，試片將可精準至包裝上的保存期限。
+                                <div class="qa_content">請將檢驗棒保存於2-35度C之環境，請維持乾燥並避免陽光或熱源直射、請勿冷凍保存。若能依指示保存及使用，試片將可精準至包裝上的保存期限。
                                 </div>
                             </li>
                         </ul>
@@ -498,7 +505,7 @@
                         <ul class="accordionPart">
                             <li>
                                 <div class="qa_title"><i class="fa fa-angle-right"></i> 妊娠期間有什麼情況下無法精準檢測嗎？</div>
-                                <div class="qa_content">本產品的pH值檢測範圍，孕婦較不適用。
+                                <div class="qa_content">請避免在懷孕期間使用，以免造成破水。
                                 </div>
                             </li>
                         </ul>
@@ -516,7 +523,7 @@
                         <ul class="accordionPart">
                             <li>
                                 <div class="qa_title"><i class="fa fa-angle-right"></i> 有其他因素會影響我的檢測結果嗎？</div>
-                                <div class="qa_content">是的，除了細菌型及陰道滴蟲之外，還有其他因素也可能會影響陰道酸鹼值，如：血、精液、停經及更年期(雌激素較少)。
+                                <div class="qa_content">是的，除了細菌型及陰道滴蟲之外，還有其他因素也可能會影響陰道酸鹼值，如：血、精液<br>另外，更年期婦女分泌物過少，檢驗棒無法充分浸潤，可能影響檢驗結果。排卵期因子宮腔內黏液大量分泌，亦可能影響檢驗結果。
                                 </div>
                             </li>
                         </ul>
@@ -551,32 +558,28 @@
 
 
                     </div>
-
                     <div class="col-lg-6 col-xs-12 text-lg-right text-center">
                         <ul class="list-inline">
                             <li class="list-inline-item">
-                                <a href="index.html#intro">品牌理念</a>
+                                <a href="index.html#intro">理念與特色</a>
                             </li>
 
                             <li class="list-inline-item">
-                                <a href="index.html#content-her-feature">品牌特色</a>
-                            </li>
-
-                            <li class="list-inline-item">
-                                <a href="index.html#goods">商品資訊</a>
+                                <a href="index.html#goods">私密處不適</a>
                             </li>
 
                             <li class="list-inline-item">
                                 <a href="index.html#contact-her">聯絡我們</a>
                             </li>
+
+                            <li class="list-inline-item">
+                                <a href="https://www.facebook.com/Hergeia/" target="_blank">facebook</a>
+                            </li>
                             <li class="list-inline-item">
                                 <a href="http://www.hygeiatouch.com" target="_blank">HygeiaTouch</a>
                             </li>
-
                         </ul>
                     </div>
-
-
                 </div>
 
                 <div class="credits">
@@ -606,9 +609,11 @@
             event.preventDefault();
             $(this).ekkoLightbox();
         });
+
     </script>
     <script>
         new WOW().init();
+
     </script>
 </body>
 
