--- a/zh/index.html
+++ b/zh/index.html
@@ -49,12 +49,11 @@
 
                     <div id="navbar-scroll" class="collapse navbar-collapse navbar-themers navbar-right">
                         <ul class="nav navbar-nav">
-                            <li><a href="#intro">品牌理念</a></li>
-                            <li><a href="#content-her-feature">品牌特色</a></li>
-                            <li><a href="#goods">商品資訊</a></li>
+                            <li><a href="#intro">理念與特色</a></li>
+                            <li><a href="#goods">私密處不適</a></li>
                             <li><a href="#contact-her">聯絡我們</a></li>
+                            <li><a href="https://www.facebook.com/Hergeia/" target="_blank">facebook</a></li>
                             <li><a href="../en/index.html">English</a></li>
-
                         </ul>
                     </div>
                 </div>
@@ -67,8 +66,9 @@
                     <div class="intro-box">
                         <div class="intro">
                             <h1 class="wow fadeInLeft">
-                                女生，就該更呵護自己的身體<br><br>
+                                <br>女生，就該更呵護自己的身體<br>
                             </h1>
+                            <h4 class="wow fadeInLeft">自在舒適的健康檢測<br><br><br></h4>
                             <div class="head-btn wow fadeInLeft">
 
                                 <a href="#intro" class="btn-primary play-market">
@@ -94,7 +94,7 @@
 
                     <!-- feature content -->
                     <div class="col-md-6 wow fadeInRight">
-                        <h2 class="intro-title">什麼是Hergeia</h2>
+                        <h2 class="intro-title">Hergeia賀小姐的理念</h2>
                         <p class="intro-p">女生，需要更多呵護。<br> 想像女神一般健康又自信的妳，
                             <br> 必須隨時傾聽自己身體的聲音，
                             <br> 而Hergeia不斷研發系列產品，
@@ -116,7 +116,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="col-md-12 feature-2-pic wow fadeInLeft">
-                            <h5 class="her-feature-title">Hergeia的特色</h5>
+                            <h5 class="her-feature-title">Hergeia賀小姐的特色</h5>
                             <p>我們致力於為女生們開發居家檢測商品<br> 讓妳不需出門、不需花費時間等待、更不需要感到尷尬
                                 <br> 就能在家中輕鬆自在地關心身體健康
                             </p>
@@ -171,10 +171,8 @@
 
                     <div class="col-md-6 wow fadeInRight">
                         <div>
-                            <h2 class="her-goods-title"><br><br>賀小姐-陰道分泌物pH值檢驗棒</h2>
-                            <p class="her-goods-content">(衛部醫器製壹字第006714)<br><br>特殊專利檔板設計，讓您在檢測過程中能感到舒適安心<br>前端雙層凹槽設計，替您解決試劑接觸肌膚的困擾
-                                <br><br>陰道炎的不適感，賀小姐最了解！
-                                <br>您再也不需要因為內診，感到緊張害羞<br>只要簡單五步驟，約一分鐘就能快速得知結果
+                            <h2 class="her-goods-title"><br>Hergeia賀小姐-陰道分泌物pH值檢驗棒</h2>
+                            <p class="her-goods-content">(衛部醫器製壹字第006714)<br>陰道炎的不適感，賀小姐最了解！<br><br>特殊專利檔板設計，讓您在檢測過程中能感到舒適安心<br>前端雙層凹槽設計，替您解決試劑接觸肌膚的困擾<br><br>您再也不需要因為內診，感到緊張害羞<br>只要簡單五步驟，約一分鐘就能快速得知結果
                             </p>
                             <div class="btn-section-her"><a href="herlady.html" class="btn-default-her">了解更多</a></div>
                         </div>
@@ -277,19 +275,19 @@
                         <div class="col-lg-6 col-xs-12 text-lg-right text-center">
                             <ul class="list-inline">
                                 <li class="list-inline-item">
-                                    <a href="#intro">品牌理念</a>
+                                    <a href="#intro">理念與特色</a>
                                 </li>
 
                                 <li class="list-inline-item">
-                                    <a href="#content-her-feature">品牌特色</a>
+                                    <a href="index.html#goods">私密處不適</a>
                                 </li>
 
                                 <li class="list-inline-item">
-                                    <a href="#goods">商品資訊</a>
+                                    <a href="index.html#contact-her">聯絡我們</a>
                                 </li>
 
                                 <li class="list-inline-item">
-                                    <a href="#contact-her">聯絡我們</a>
+                                    <a href="https://www.facebook.com/Hergeia/" target="_blank">facebook</a>
                                 </li>
                                 <li class="list-inline-item">
                                     <a href="http://www.hygeiatouch.com" target="_blank">HygeiaTouch</a>
@@ -328,11 +326,9 @@
                 event.preventDefault();
                 $(this).ekkoLightbox();
             });
-
         </script>
         <script>
             new WOW().init();
-
         </script>
     </div>
 </body>
